# realworld-app-selenium-pytest

./: .gitignore  .pre-commit-config.yaml  README.md  conftest.py  pyproject.toml
e2e/: config.json  utils.py
e2e/page_objects/: bank_accounts_page.py  common.py  get_started_modal.py  home_page.py  signin_page.py  signup_page.py
e2e/tests/: test_bank_accounts.py  test_home.py  test_signin.py  test_signup.py
fixtures/: auth.py  page_objects.py
